--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ lib-cov
 # Coverage directory used by tools like istanbul
 coverage
 
+# Ignore Mac OS desktop services store
+.DS_Store
+
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
 
